main layout on ui4

--- a/ethnode/ui4/index.html
+++ b/ethnode/ui4/index.html
@@ -60,8 +60,8 @@
         </span>
 
         <span id="prototype-main-container" class="none">
-    <div class="main-ctx-outer sea">
-        <div class="main-ctx-inner">
+    <div class="main-ctx-outer rose">
+        <div class="main-ctx-inner ">
 
 
         </div>
@@ -78,7 +78,33 @@
         <!-- sticky -header -->
         <span id="prototype-sticky-navbar" class="none">
             <div class="nav-header-style">
-                test
+
+                <div class="ui menu">
+                      <!--a class="ert-logo" href="#top">
+                             &nbsp; Alpha
+                      </a-->
+                       <div class="header item">
+                           <a class="ert-logo" href="#top">
+
+                           </a>
+                       </div>
+                      <a class="item" href="#people">
+                        People
+                      </a>
+                      <a class="item active" href="#gigs">
+                        Gigs
+                      </a>
+
+                     <div class="item right">
+
+                         <a class="ert-logo" href="#myprofile">
+                             &nbsp;
+                         </a>
+                         <strong>  &nbsp;  &nbsp; First L.</strong>
+
+                     </div>
+
+                </div>
             </div>
          </span>
         <!-- -->
@@ -112,6 +138,19 @@
                         <i class="material-icons clr-red">face</i>
                     </button>
           </div>
+
+</span>
+
+<span id="prototype-profile-content" class="none">
+
+    <div class="ui two column stackable grid">
+        <div class="five wide column">
+            <div class="ui segment">Content</div>
+        </div>
+        <div class="ten wide column">
+            <div class="ui segment">Content</div>
+        </div>
+    </div>
 
 </span>
         <!-- end components -->
