--- a/ethnode/ui4/index.html
+++ b/ethnode/ui4/index.html
@@ -7,40 +7,31 @@
     <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <!-- Semantic UI CSS-->
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">
+    <!--<link rel="stylesheet" href="https://cdn.rawgit.com/Semantic-Org/Semantic-UI-CSS/master/semantic.min.css">-->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- Material Design Bootstrap-->
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
+    <!--<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">-->
+
     <!-- Roboto-->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-    <!-- Montserrat-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800,900">
+
     <!-- Main CSS file-->
 
     <link rel="stylesheet" href="main.css">
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-
-    <!--<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
-
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
 
 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/accordion.css" />
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/accordion.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.1.0/particles.min.js"></script>
-
-    <script src="main.js"></script>
 
     <title>Ethearnal UI Alpha v0.1 </title>
 
@@ -56,11 +47,18 @@
     <!-- begin components -->
         <span id="prototype-intro-headline" class="none">
             <div id="intro-headline">
-            </div>
-        </span>
+                <form action="#">
+                    <div class="mdl-textfield mdl-js-textfield">
+                 <input class="mdl-textfield__input" type="text" id="sample1">
+                <label class="mdl-textfield__label" for="sample1">Text...</label>
+                </div>
+                </form>
 
+            </div>
+
+        </span>
         <span id="prototype-main-container" class="none">
-    <div class="main-ctx-outer rose">
+    <div class="main-ctx-outer">
         <div class="main-ctx-inner ">
 
 
@@ -78,32 +76,20 @@
         <!-- sticky -header -->
         <span id="prototype-sticky-navbar" class="none">
             <div class="nav-header-style">
-
-                <div class="ui menu">
-                      <!--a class="ert-logo" href="#top">
-                             &nbsp; Alpha
-                      </a-->
-                       <div class="header item">
-                           <a class="ert-logo" href="#top">
-
-                           </a>
-                       </div>
-                      <a class="item" href="#people">
-                        People
-                      </a>
-                      <a class="item active" href="#gigs">
+                <div class="lefty">
+                   <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
                         Gigs
-                      </a>
+                    </button>
+                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                        People
+                    </button>
+                </div>
+                <div>
 
-                     <div class="item right">
-
-                         <a class="ert-logo" href="#myprofile">
-                             &nbsp;
-                         </a>
-                         <strong>  &nbsp;  &nbsp; First L.</strong>
-
-                     </div>
-
+                </div>
+                <div class="right-section">
+                    <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
+                    </button>
                 </div>
             </div>
          </span>
@@ -141,16 +127,25 @@
 
 </span>
 
+
+<span id="prototype-box-spacer" class="none">
+    <div class="box-spacer">
+
+    </div>
+</span>
+
+<span id="prototype-box-main-search" class="none">
+    <div class="ui icon input">
+        <input type="text" placeholder="Search...">
+        <i class="search icon"></i>
+    </div>
+</span>
+
+
+
+
 <span id="prototype-profile-content" class="none">
 
-    <div class="ui two column stackable grid">
-        <div class="five wide column">
-            <div class="ui segment">Content</div>
-        </div>
-        <div class="ten wide column">
-            <div class="ui segment">Content</div>
-        </div>
-    </div>
 
 </span>
         <!-- end components -->
@@ -158,6 +153,9 @@
 
         <!--<div id="intro-headline" class="sea"></div>-->
         <!--<canvas class="intro-canvas"></canvas>-->
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+         <script src="main.js"></script>
 
         <script>
             $(document).ready(function() {
