repush own gigs

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -890,20 +890,21 @@
             </div><a href="" class="navbar-brand hidden-xs"><img src="images/logo.png" alt="Ethearnal Logo"></a>
 
 
-              <div style="float:left; margin-left: 19px; margin-top: 26px;">
-                  <div style="float:left; margin-left: 19px;">
-                      <button id="beep-btn" class="mdl-button mdl-js-button mdl-button--fab">
-                          <i class="material-icons">settings_input_antenna</i>
-                      </button>
-                      <!--i class="material-icons">settings_input_antenna</i-->
-                  </div>
-                  <div style="float:left; margin-left: 21px;">
-                      <p style="color:#92a8d1;">Something cool</p>
-                  </div>
-                  <div class="mdl-tooltip" data-mdl-for="beep-btn">
-                      PUSH UPDATE TO PEERS
-                  </div>
-              </div>
+<!-- something cool -->
+              <!--<div style="float:left; margin-left: 19px; margin-top: 26px;">-->
+                  <!--<div style="float:left; margin-left: 19px;">-->
+                      <!--<button id="beep-btn" class="mdl-button mdl-js-button mdl-button&#45;&#45;fab">-->
+                          <!--<i class="material-icons">settings_input_antenna</i>-->
+                      <!--</button>-->
+                      <!--&lt;!&ndash;i class="material-icons">settings_input_antenna</i&ndash;&gt;-->
+                  <!--</div>-->
+                  <!--<div style="float:left; margin-left: 21px;">-->
+                      <!--<p style="color:#92a8d1;">Something cool</p>-->
+                  <!--</div>-->
+                  <!--<div class="mdl-tooltip" data-mdl-for="beep-btn">-->
+                      <!--PUSH UPDATE TO PEERS-->
+                  <!--</div>-->
+              <!--</div>-->
 
 
 
@@ -1105,7 +1106,7 @@
       </div>
     </section>
     <!-- Including {GIGS} page content-->
-    <section class="gigs-page-content" style="display: none">
+    <section class="gigs-page-content">
       <div class="container">
         <div class="filters col-md-3">
             <h6 style="margin-top: 0px; padding-top: 0px;">Search Gigs</h6>
@@ -1480,6 +1481,8 @@
 
 <script>
 
+/*
+
 // Get the modal
 var modal = document.getElementById('myModal');
 
@@ -1491,9 +1494,10 @@ var btn = document.getElementById("beep-btn");
 // var span = document.getElementsByClassName("close")[0];
 
 // When the user clicks the button, open the modal
-btn['op_i']=1;
-var k = 0;
-var tno = null;
+
+    btn['op_i']=1;
+    var k = 0;
+    var tno = null;
 
 
 
@@ -1535,11 +1539,6 @@ var fade_out = function() {
 btn.onclick = fade_in;
 
 
-// When the user clicks on <span> (x), close the modal
-/*span.onclick = function() {
-    fade_out();
-    modal.style.display = "none";
-}*/
 
 // When the user clicks anywhere outside of the modal, close it
 window.onclick = function(event) {
@@ -1547,6 +1546,10 @@ window.onclick = function(event) {
         fade_out();
     }
 }
+
+*/
+
+
 </script>
 
 
