WIP. added ajax tags load depending on expertise selected. use Software or Graphics to test. works only on Gigs text enter keypress

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1118,27 +1118,32 @@
                   <i class="circular search link icon"></i>
               </div>
               <br>
-            <p> Expertise Domain</p>
-            <select class="ui fluid search dropdown">
-                <option value="">Expertise Domains</option>
-                <option value="SD">Software Development</option>
-                <option value="FA">Finance & Accounting</option>
-                <option value="MA">Music & Audio</option>
-                <option value="VA">Video & Animation</option>
-                <option value="GD">Graphic & Design</option>
-                <option value="TW">Text & Writing</option>
-                <option value="CS">Consulting Services</option>
-                <option value="OS">Other Services</option>
-            </select>
+            <div id="expertisedomain">
+              <p> Expertise Domain</p>
+              <select class="ui fluid search dropdown">
+                  <option value="">Expertise Domains</option>
+                  <option value="SD">Software Development</option>
+                  <option value="FA">Finance & Accounting</option>
+                  <option value="MA">Music & Audio</option>
+                  <option value="VA">Video & Animation</option>
+                  <option value="GD">Graphic & Design</option>
+                  <option value="TW">Text & Writing</option>
+                  <option value="CS">Consulting Services</option>
+                  <option value="OS">Other Services</option>
+              </select>
+            </div>
             <br>
-            <p> Skills </p>
-            <select class="ui fluid search dropdown" multiple="">
+            <div id="skilltags">
+              <p> Skills </p>
+              <select class="ui fluid search dropdown" multiple=""></select>
+            </div>
+            <!--<select class="ui fluid search dropdown" multiple="">
               <option value="">Skill Tags</option>
               <option value="TW">Python</option>
               <option value="CS">Javascript</option>
               <option value="OS">CSS</option>
-              <!-- tags goes here -->
-            </select>
+               tags goes here 
+            </select>-->
           <br>
             <p>Budget</p>
           <div class="filter budget">
