--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1119,24 +1119,24 @@
               </div>
               <br>
             <p> Expertise Domain</p>
-            <select class="ui fluid search dropdown">
+            <select id='domain-expertise-select' class="ui fluid search dropdown">
                 <option value="">Expertise Domains</option>
-                <option value="SD">Software Development</option>
-                <option value="FA">Finance & Accounting</option>
-                <option value="MA">Music & Audio</option>
-                <option value="VA">Video & Animation</option>
-                <option value="GD">Graphic & Design</option>
-                <option value="TW">Text & Writing</option>
-                <option value="CS">Consulting Services</option>
-                <option value="OS">Other Services</option>
+                <option value="sd">Software Development</option>
+                <option value="fa">Finance & Accounting</option>
+                <option value="ma">Music & Audio</option>
+                <option value="va">Video & Animation</option>
+                <option value="gd">Graphic & Design</option>
+                <option value="tw">Text & Writing</option>
+                <option value="cs">Consulting Services</option>
+                <option value="os">Other Services</option>
             </select>
             <br>
             <p> Skills </p>
-            <select class="ui fluid search dropdown" multiple="">
+            <select id='skills-tags' class="ui fluid search dropdown" multiple="">
               <option value="">Skill Tags</option>
-              <option value="TW">Python</option>
+              <!--option value="TW">Python</option>
               <option value="CS">Javascript</option>
-              <option value="OS">CSS</option>
+              <option value="OS">CSS</option-->
               <!-- tags goes here -->
             </select>
           <br>
