--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -1133,7 +1133,7 @@
             <br>
             <p> Skills </p>
             <select id='skills-tags' class="ui fluid search dropdown" multiple="">
-              <option value="">Skill Tags</option>
+              <option value="">Select Expertise domain</option>
               <!--option value="TW">Python</option>
               <option value="CS">Javascript</option>
               <option value="OS">CSS</option-->
