--- a/ethnode/webui/src/profile-new.html
+++ b/ethnode/webui/src/profile-new.html
@@ -48,75 +48,38 @@
 
     //= templates/header-global.html
 
-    <section id="my-profile-headline" class="background-image">
-        <div class="button-next" style="margin: auto;">
-            <i id="myBtn--" open-modal="#edit-profile-headline" class="material-icons open-modal">add_a_photo</i>&nbsp;</div>
-        <!--div class="button-next"><i class="material-icons">keyboard_arrow_right</i></div-->
-        <div class="items">
-            <div class="item">
-                
-                <div id="profile-headline" class="aspecto-img"></div>
-
-            </div>
-        </div>
-    </section>
-    <!-- This section is for your whole profile, including left and right sides, profile information and etc.-->
-    <section id="my-profile-section" class="documentation">
+        <section class="profile-headline">
         <div class="container">
-            <!-- Profile information including profile image, current work, current city and state, skills and etc.-->
-            <div class="profile-information-container col-lg-4 col-md-4 col-sm-12 col-xs-12" s>
-
-                <div class="profile-information up">
-
-
-                    <div class="profile-upper">
-
-                        <div open-modal="#edit-profile" class="profile-image open-modal"><img src="" alt="">
-                            <div class="text-on-image">
-                                <p>Change
-                                    <i class="material-icons">edit</i>
-                                </p>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="user-info-wrap">
+                        <div class="user-avatar"></div>
+                        <div class="user-info color-white">
+                            <p class="user-name font-size-28">Letice Ivans</p>
+                            <p class="user-role font-size-14">Creative Designer</p>
+                            <div class="user-item"><span class="item-title font-size-14">Skills:</span><span class="item">Adobe Photoshop</span><span class="item">Adobe Illustrator</span></div>
+                            <div class="user-item"><span class="item-title font-size-14">Languagee:</span><span class="item">English</span><span class="item">Italian</span></div>
+                            <p class="user-description font-size-16 text-bold">Hello I'm letice, I love to make creative designs and illustrations.  Would like to work on interesting projects and meet people.</p>
+                            <div class="profile-social">
+                                <ul class="list-inline">
+                                    <li><a href=""><i class="icon-facebook"></i></a></li>
+                                    <li><a href=""><i class="icon-twitter"></i></a></li>
+                                    <li><a href=""><i class="icon-r-s-s"></i></a></li>
+                                    <li><a href=""><i class="icon-instagram"></i></a></li>
+                                    <li><a href=""><i class="icon-google"></i></a></li>
+                                </ul>
                             </div>
                         </div>
-
-                        <h2></h2>
-
-                        <h5 class="profile-information-position"></h5>
-                        <p class="location"></p>
-
-                        <!--button class="leave-msg">Send Message</button-->
-                        <!-- SKILLS-->
-                        <p class="skills-text">Skills <i class="skills-down material-icons">keyboard_arrow_down</i></p>
-                        <div class="skills hidden">
-                        </div>
-                        <!-- LANGUAGES-->
-                        <p class="skills-text">Languages <i class="languages-down material-icons">keyboard_arrow_down</i></p>
-                        <div class="languages hidden">
-
-                        </div>
-
-
                     </div>
                 </div>
-                <div class="profile-information middle">
-                    <!-- Profile description including a description about you. (dark-gray section)-->
-                    <div class="profile-description">
-                        <p>Profile's description.</p>
-                    </div>
-                </div>
-                <!-- Profile footer, including social media links.-->
-                <div class="profile-footer">
-                    <ul class="list-inline">
-                        <li><a href=""><i class="icon-facebook"></i></a></li>
-                        <li><a href=""><i class="icon-twitter"></i></a></li>
-                        <li><a href=""><i class="icon-r-s-s"></i></a></li>
-                        <li><a href=""><i class="icon-instagram"></i></a></li>
-                        <li><a href=""><i class="icon-google"></i></a></li>
-                    </ul>
-                </div>
-            </div>
+            </section>
+    <!-- This section is for your whole profile, including left and right sides, profile information and etc.-->
+    <section id="my-profile-section" class="inner-profile documentation">
+        <div class="container">
+            <!-- Profile information including profile image, current work, current city and state, skills and etc.-->
+            
             <!-- Profile documentation including jobs and education, stories, shout-outs and questions with answers-->
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 profile-documentation-full">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 profile-documentation-full">
                 <div class="profile-documentation col-xs-12">
 
                     <ul role="tablist" class="nav nav-tabs">
