profile page tab fixes

--- a/ethnode/webui/profile-new.html
+++ b/ethnode/webui/profile-new.html
@@ -122,17 +122,20 @@
                 </div>
                 <div class="tab-content col-xs-12">
                     <!-- Gigs TAB-->
-                    <div id="gigs" role="tabpanel" class="tab-content active in col-xs-12">
-                        <div class="gigs-container-profile">
+                    <div id="gigs" role="tabpanel" class="tab-pane active in col-xs-12">
+                        <div class="gig-container-tab">
+
                         </div>
                     </div>
                     <!-- Portfolio TAB-->
                     <div id="portfolio" role="tabpanel" class="tab-pane fade col-xs-12">
-                        <div class="portfolio-container"></div>
+                        <div class="gig-container-tab">
+
+                        </div>
                     </div>
-                    <!-- Portfolio TAB-->
+                    <!-- Orders TAB-->
                     <div id="orders" role="tabpanel" class="tab-pane fade col-xs-12">
-                        <div class="gigs-container-orders">
+                        <div class="gig-container-tab">
                             <!--<div data-toggle="modal" data-target="#gigModal" class="gig content-block">-->
                             <!--<button id="dropdowngiga0" class="mdl-button mdl-js-button mdl-button&#45;&#45;icon dropdown-button"><i class="material-icons">more_vert</i></button>-->
                             <!--<ul for="dropdowngiga0" class="mdl-menu mdl-menu&#45;&#45;bottom-right mdl-js-menu mdl-js-ripple-effect">-->
@@ -158,6 +161,18 @@
                             <!--</div>-->
                         </div>
                     </div>
+                    <!-- Portfolio TAB-->
+                    <div id="archived" role="tabpanel" class="tab-pane fade col-xs-12">
+                            <div class="gig-container-tab">
+    
+                            </div>
+                        </div>
+                        <!-- Portfolio TAB-->
+                    <div id="messages" role="tabpanel" class="tab-pane fade col-xs-12">
+                            <div class="gig-container-tab">
+    
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
